# backend/controller/chat.go
@@ -1,14 +1,30 @@
 package controller
 
 import (
+	"backend/controller/openapi"
 	models "backend/models/chat"
+	"backend/utils"
 	"net/http"
 
 	"github.com/gorilla/websocket"
 	"github.com/labstack/echo/v4"
 )
 
-func (s *Server) ChatSocket(ctx echo.Context) error {
+func (s *Server) ChatSocket(ctx echo.Context, params openapi.ChatSocketParams) error {
+
+	userID, err := utils.ExtractUserID(ctx)
+	if err != nil {
+		return ctx.JSON(http.StatusInternalServerError, err.Error())
+	}
+
+	roomID := params.RoomId
+	hasPermisson, err := s.cu.CheckRoomAccessPermission(ctx, userID, roomID)
+	if err != nil {
+		return ctx.JSON(http.StatusInternalServerError, err.Error())
+	} else if !hasPermisson {
+		return ctx.JSON(http.StatusUnauthorized, "You don't have permission to access this room")
+	}
+
 	upgrader := &websocket.Upgrader{
 		CheckOrigin: func(r *http.Request) bool {
 			return true
@@ -23,7 +39,7 @@ func (s *Server) ChatSocket(ctx echo.Context) error {
 	hub := models.NewHub()
 	go s.cu.RunLoop(hub)
 
-	client := models.NewClient(ws)
+	client := models.NewClient(ws, userID, roomID)
 	go s.cu.ReadLoop(client, hub.BroadcastCh, hub.UnRegisterCh)
 	go s.cu.WriteLoop(client)
 	hub.RegisterCh <- client
